# digilib

./: .clang-format  .gitignore  CMakeLists.txt  Procfile  README.md  digiserver.py  digiterminal.c  digitest.c  digivice  digivice.c  generate-digimon-header.py  generate-sprites-header.py  import-digimon.csv.example  main.c
include/: api.h  digiapi.h  digibattle.h  digibattle_classic.h  digicomm.h  digihal.h  digihardware.h  digimon.h  digitype.h  digiworld.h  enums.h  logging.h  wificom.h
include/digivice/: animation.h  avatar.h  battle.h  button.h  clock.h  digivice.h  digivice_hal.h  dv_android.h  enums_digivice.h  game.h  globals.h  info.h  menu.h  player.h  render.h  texture.h  training.h  w0rld.h
resource/: devimon.png~  digitama botamon.png~  digitama punimon.png~  garurumon.png~  list.txt  punimon.png~
source/: api.c  digiapi.c  digibattle.c  digibattle_classic.c  digihal.c  digimon.c  digiworld.c  wificom.c
source/digivice/: animation.c  avatar.c  battle.c  button.c  clock.c  digivice.c  digivice_hal.c  dv_android.c  game.c  globals.c  info.c  menu.c  player.c  render.c  texture.c  training.c  w0rld.c  w0rld_unix.c
source/platform/pc/: digicomm.c  digihardware.c  logging.c
toolchain/: mingw-w64-x86_64.cmake
